# GateThread

./: .gitignore  CONTRIBUTING.md  PROJECT.md  README.md  alembic.ini  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/storage/: engine.py  models.py
app/storage/migrations/: env.py
app/storage/migrations/versions/: 0001_initial_schema.py
deploy/aws/: elasticache.tf  main.tf  outputs.tf  rds.tf  secrets.tf  variables.tf
tests/: conftest.py
tests/unit/: test_smoke.py
